--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,6 @@
     <link rel="stylesheet" href="./css/media.css">
     <title>Экспофорум</title>
 </head>
-
 <body>
     <header class="header">
         <div class="header__wrap">
@@ -19,7 +17,7 @@
                     <button class="header__nav-btn">
                         <span class="header__nav-btn-icon"></span>
                     </button>
-
+                    <!-- мобильная навигация -->
                     <div class="header__mobile-nav header__mobile-nav_hidden">
                         <a class="header__mobile-logo" href="#"><img src="./img/SVG/logo2.svg" alt="logo"></a>
                         <div class="header__mobile-list">
@@ -32,7 +30,6 @@
                             </ul>
                         </div>
                     </div>
-
                     <div class="header__logo">
                         <a class="header__link-logo" href="#"><img src="./img/png/logo1.png" alt="logo"
                                 class="header__logo-img"></a>
@@ -46,13 +43,10 @@
                             <li><a href="#" class="nav__link">Контакты</a></li>
                         </ul>
                     </nav>
-
                     <div class="header__search-box">
                         <button class="header__search-btn"><img src="./img/SVG/search.svg" alt="search"></button>
                         <input type="search" class="header__search-input" name="" placeholder="Поиск...">
-
                     </div>
-
                     <div class="header__lang">
                         <div class="header__globus">
                             <img src="./img/SVG/globe.svg" alt="icon" class="header__globus-img">
@@ -61,12 +55,10 @@
                     </div>
                 </div>
             </div>
-
             <div class="header__content container">
                 <div class="header__info-text">
                     <h1 class="header__text-title">ЭКСПОФОРУМ</h1>
                     <div class="header__text">конгрессно-выставочный центр<br>Cанкт-Петербурга</div>
-
                     <div class="header__link-arrow header__link-arrow_align_center">
                         <a class="header__link-wrap" href="#">
                             <div class="header__link">О комплексе</div>
@@ -76,9 +68,11 @@
                         </a>
                     </div>
                 </div>
-
+                <!-- плавающая кнопка -->
+                <div class="back-btn">
+                    <p><a class="back-link" href="../index.html#portfolio">Вернуться</a></p>
+                </div>
                 <div class="header__cards">
-
                     <div class="header__card header__card_color_blue">
                         <div class="header__card-text">Календарь мероприятий</div>
                         <div class="header__link-arrow">
@@ -90,7 +84,6 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="header__card header__card_color_green">
                         <div class="header__card-text">Как добраться до Экспофорума</div>
                         <div class="header__link-arrow">
@@ -102,7 +95,6 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="header__card header__card_color_yellow">
                         <div class="header__card-text">Онлайн-заявка на организацию мероприятия</div>
                         <div class="header__link-arrow">
@@ -114,7 +106,6 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="header__card header__card_color_red">
                         <div class="header__card-text">План и инфраструктура комплекса</div>
                         <div class="header__link-arrow">
@@ -126,12 +117,10 @@
                             </a>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
-
     <main class="main">
         <nav class="main__nav">
             <div class="main__nav-columns container">
@@ -183,7 +172,6 @@
                 </div>
             </div>
         </nav>
-
         <div class="main__cards-wrap">
             <div class="main__cards container">
                 <div class="main__cards-header">
@@ -198,21 +186,18 @@
                     </div>
                 </div>
                 <div class="main__cards-grid">
-
                     <div class="main__card">
                         <img class="main__card-img" src="./img/JPG/axpoElka.jpg" alt="img">
                         <p class="main__card-data">2 января 2020 г. – 7 января 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">ЭКСПО ЕЛКА</a>
                         <p class="main__card-text">Парк интерактивных развлечений</p>
                     </div>
-
                     <div class="main__card">
                         <img class="main__card-img" src="./img/JPG/junwex.jpg" alt="img">
                         <p class="main__card-data">5 февраля 2020 г. – 9 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">Junwex Петербург</a>
                         <p class="main__card-text">Выставка ювелирных изделий</p>
                     </div>
-
                     <div class="main__card">
                         <img class="main__card-img" src="./img/JPG/nevskiiLarec.jpg" alt="img">
                         <p class="main__card-data">7 февраля 2020 г. – 9 февраля 2020 г.</p>
@@ -220,44 +205,36 @@
                         <p class="main__card-text">Выставка-ярмарка народных художественных
                             промыслов и ремесел</p>
                     </div>
-
                     <div class="main__card">
                         <img class="main__card-img" src="./img/JPG/ponaexali.jpg" alt="img">
                         <p class="main__card-data">14 февраля 2020 г. – 23 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">ПОНАЕХАЛИ!</a>
                         <p class="main__card-text">Специализированная арт-ярмарка</p>
                     </div>
-
                     <div class="main__card">
                         <img class="main__card-img" src="./img/JPG/vetCamp.jpg" alt="img">
                         <p class="main__card-data">18 февраля 2020 г. – 21 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">VET.CAMP</a>
                         <p class="main__card-text">Конференция для ветеринарных врачей</p>
                     </div>
-
                     <div class="main__card">
                         <img class="main__card-img" src="./img/JPG/vetCampVistovka.jpg" alt="img">
                         <p class="main__card-data">26 февраля 2020 г. – 28 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">ExpoHoReCa</a>
                         <p class="main__card-text">Специализированная выставка</p>
                     </div>
-
                 </div>
             </div>
         </div>
-
         <div class="main__info-wrap">
             <div class="main__info container">
                 <div class="main__info-imgs">
                     <a class="main__info-link" href="#"><img class="main__info-img" src="./img/JPG/parkMesto.jpg"
                             alt="img"></a>
-
                     <a class="main__info-link" href="#"><img class="main__info-img" src="./img/JPG/axpoElka2.jpg"
                             alt="img"></a>
                 </div>
-
                 <div class="main__news">
-
                     <div class="main__news-header">
                         <h2 class="main__text">Новости</h2>
                         <div class="main__link-wrap">
@@ -269,7 +246,6 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="main__news-list">
                         <a class="main__new" href="#">
                             <img class="main__new-img" src="./img/JPG/nov4january.jpg" alt="img">
@@ -278,7 +254,6 @@
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
                                 </h3>
                             </div>
-
                         </a>
                         <a class="main__new" href="#">
                             <img class="main__new-img" src="./img/JPG/nov2january1.jpg" alt="img">
@@ -287,7 +262,6 @@
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
                                 </h3>
                             </div>
-
                         </a>
                         <a class="main__new" href="#">
                             <img class="main__new-img" src="./img/JPG/nov2january2.jpg" alt="img">
@@ -296,22 +270,15 @@
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
                                 </h3>
                             </div>
-
                         </a>
-
                     </div>
-
                 </div>
             </div>
         </div>
-
     </main>
-
-
     <footer class="footer__wrap">
         <div class="footer__nav-container container">
             <div class="footer__nav">
-
                 <nav class="footer__column-nav">
                     <div class="footer__nav-text">
                         <h3 class="footer__title">О компании</h3>
@@ -322,7 +289,6 @@
                             <li class="footer__nav-link"><a href="#">Контакты</a></li>
                         </ul>
                     </div>
-
                     <div class="footer__nav-text">
                         <h3 class="footer__title">Организаторам</h3>
                         <ul class="footer__nav-linkes">
@@ -333,7 +299,6 @@
                         </ul>
                     </div>
                 </nav>
-
                 <nav class="footer__column-nav">
                     <div class="footer__nav-text">
                         <h3 class="footer__title">Экспонентам</h3>
@@ -344,8 +309,6 @@
                             <li class="footer__nav-link"><a href="#">Забронировать гостиницу</a></li>
                         </ul>
                     </div>
-
-
                     <div class="footer__nav-text">
                         <h3 class="footer__title">Посетителям</h3>
                         <ul class="footer__nav-linkes">
@@ -356,7 +319,6 @@
                         </ul>
                     </div>
                 </nav>
-
                 <nav class="footer__column-nav">
                     <div class="footer__nav-text">
                         <h3 class="footer__title">Прессе</h3>
@@ -371,16 +333,12 @@
                         <button class="footer__app-store">
                             <img src="./img/buttons/appstore.svg" alt="appstore">
                         </button>
-
                         <button class="footer__app-store">
                             <img src="./img/buttons/googlePlay.svg" alt="googlePlay">
                         </button>
                     </div>
                 </nav>
             </div>
-
-
-
             <div class="footer__media">
                 <div class="footer__social">
                     <h3 class="footer__title-social">Мы в соц. сетях</h3>
@@ -405,9 +363,7 @@
                 </div>
             </div>
         </div>
-
     </footer>
     <script src="/js/style.js"></script>
 </body>
-
 </html>
