--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="http://fonts.cdnfonts.com/css/circe" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
+    <link type="image/png" sizes="96x96" rel="icon" href="./img/favicon/icons8-программирование-gradient-96.png">
     <title>Экспофорум</title>
 </head>
 <body>
